Fix problems with css not linking up correctly

--- a/static_pages/index.html
+++ b/static_pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nature Stream</title>
-  <!-- <link rel="stylesheet" href=".frontend/styles/styles.css"> -->
+  <link rel="stylesheet" href="/styles/styles.css" crossorigin="anonymous">>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="./bundle.js"></script>
 </head>
