--- a/static_pages/index.html
+++ b/static_pages/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Nature Stream</title>
-  <link rel="stylesheet" href="/styles/styles.css" crossorigin="anonymous">>
+  <link rel="stylesheet" href="/styles/styles.css" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Nanum+Brush+Script" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="./bundle.js"></script>
 </head>
