--- a/static_pages/index.html
+++ b/static_pages/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Nature Stream</title>
+  <title>Horror Stream</title>
+  <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
   <link rel="stylesheet" href="/styles/styles.css" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa|Nanum+Brush+Script" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
